Terminado el primer proyecto.
Terminado el proyecto "Arquitectura de la información"

--- a/index.html
+++ b/index.html
@@ -1,9 +1,346 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" dir="ltr">
   <head>
+    <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Festival de música electrónica de la mano de los mejores DJs del mundo."
+    />
+    <meta name="keywords" content="DJs, Música Electrónica, Festival, Fiesta" />
+    <meta name="robots" content="noindex,nofollow" />
+
+    <!-- OG Etiquetas -->
+    <meta property="og:type" content="website" />
+    <meta
+      name="og:title"
+      content="Ven a disfrutar de uno de los mejores festivales de música electrónica - DJ'S Music Festival"
+    />
+    <meta
+      name="og:description"
+      content="Ven a uno de los mejores festival de música electrónica de la mano de los mejores DJs del mundo."
+    />
+
+    <link rel="shortcut icon" href="/assets/imgs/favicon.ico" />
+    <title>DJ'S Music Festival</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>DJ'S Music Festival</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="/">Inicio</a>
+          </li>
+          <li>
+            <a href="#artistas">Artistas</a>
+          </li>
+          <li>
+            <a href="/novedades">Novedades</a>
+          </li>
+          <li>
+            <a href="#ubicacion">Ubicación</a>
+          </li>
+          <li>
+            <a href="/patrocinadores">Patrocinadores</a>
+          </li>
+          <li>
+            <a href="/ediciones">Ediciones</a>
+          </li>
+          <li>
+            <a href="/contacto.html">Contacto</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="/entradas">Entradas</a>
+          </li>
+          <li>
+            <button title="Mi Cuenta">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4h-4Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <search>
+        <form id="buscador">
+          <input
+            type="search"
+            name="query"
+            maxlength="50"
+            accesskey="s"
+            placeholder="Buscar"
+          />
+        </form>
+      </search>
+    </header>
+    <main>
+      <h2>DJ'S Music Festival</h2>
+      <h3>Días 21, 22 y 23 de Julio de 2025</h3>
+      <!-- Banner -->
+      <section>
+        <picture>
+          <img
+            src="/assets/imgs/banner.webp"
+            alt="Imagen del escenario principal durante un concierto"
+          />
+        </picture>
+      </section>
+      <!-- Artistas -->
+      <section id="artistas">
+        <h2>Artistas</h2>
+        <div>
+          <article>
+            <h3>Alan Walker</h3>
+            <picture>
+              <img
+                src="/assets/imgs/artistas/Alan-Walker.webp"
+                alt="Alan Walker"
+                title="Alan Walker"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article>
+            <h3>David Guetta</h3>
+            <picture>
+              <img
+                src="/assets/imgs/artistas/David-Guetta.webp"
+                alt="David Guetta"
+                title="David Guetta"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article>
+            <h3>Hardwell</h3>
+            <picture>
+              <img
+                src="/assets/imgs/artistas/Hardwell.webp"
+                alt="Hardwell"
+                title="Hardwell"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article>
+            <h3>Martin Garrix</h3>
+            <picture>
+              <img
+                src="/assets/imgs/artistas/Martin-Garrix.webp"
+                alt="Martin Garrix"
+                title="Martin Garrix"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+          <article>
+            <h3>Armin van Buuren</h3>
+            <picture>
+              <img
+                src="/assets/imgs/artistas/Armin-van-Buuren.webp"
+                alt="Armin van Buuren"
+                title="Armin van Buuren"
+                loading="lazy"
+              />
+            </picture>
+          </article>
+        </div>
+        <a href="/artistas">Ver Todos los Artistas</a>
+      </section>
+      <!-- Novedades -->
+      <section>
+        <h2>Novedades</h2>
+        <div>
+          <article>
+            <a href="/novedades/categoria/comunicados">Comunicados</a>
+            <a
+              href="/novedades/ya-estan-disponibles-las-entradas-y-descuentos-de-este-ano"
+            >
+              <h3>
+                Ya están disponibles las entradas y descuentos de este año
+              </h3>
+              <picture>
+                <img
+                  src="/assets/imgs/novedades/noticia-1.webp"
+                  alt="Imagen de uno de los escenarios del festival durante una actuación"
+                />
+              </picture>
+            </a>
+          </article>
+          <article>
+            <a href="/novedades/categoria/artistas">Artistas</a>
+            <a href="/novedades/nuevo-artista-confirmado:-alan-walker">
+              <h3>Nuevo artista confirmado: Alan Walker.</h3>
+              <picture>
+                <img
+                  src="/assets/imgs/artistas/Alan-Walker-2.webp"
+                  alt="Imagen de Alan Walker"
+                />
+              </picture>
+            </a>
+          </article>
+          <article>
+            <a href="/novedades/categoria/comunicados">Comunicados</a>
+            <a
+              href="/novedades/¡para-este-ano-se-esperan-mas-de-78.000-asistentes!"
+            >
+              <h3>¡Para este año se esperan más de 968.000 asistentes!.</h3>
+              <picture>
+                <img
+                  src="/assets/imgs/novedades/noticia-2.webp"
+                  alt="Imagen de uno de los escenarios del festival durante una actuación"
+                />
+              </picture>
+            </a>
+          </article>
+        </div>
+      </section>
+      <!-- Patrocinadores -->
+      <section>
+        <h2>Patrocinadores</h2>
+        <div>
+          <article>
+            <picture>
+              <img
+                src="/assets/imgs/patrocinadores/brugal.png"
+                alt="logo de Brugal"
+                title="Brugal"
+              />
+            </picture>
+          </article>
+          <article>
+            <picture>
+              <img
+                src="/assets/imgs/patrocinadores/movistar.png"
+                alt="logo de Movistar"
+                title="Movistar"
+              />
+            </picture>
+          </article>
+          <article>
+            <picture>
+              <img
+                src="/assets/imgs/patrocinadores/coca-cola.png"
+                alt="logo de Coca Cola"
+                title="Coca Cola"
+              />
+            </picture>
+          </article>
+        </div>
+        <a href="/patrocinadores">Ver Todos</a>
+      </section>
+      <!-- Ubicación -->
+      <section id="ubicacion">
+        <h2>Ubicación</h2>
+        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2835.9247182234635!2d10.668823112157451!3d44.700735883932175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47801dda6cbcf20d%3A0x9402c93608b8a59!2sRCF%20Arena%20Campovolo%20Reggio%20Emilia!5e0!3m2!1ses!2ses!4v1735301184166!5m2!1ses!2ses"
+            width="1200"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+      <button tabindex="0" title="Volver al principio">
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 6v13m0-13 4 4m-4-4-4 4"
+          />
+        </svg>
+      </button>
+    </main>
+    <footer>
+      <h3>
+        DJ'S Music Festival -
+        <a
+          href="mailto:info@djsmusicfestival.com"
+          title="Enviar email a: info@djsmusicfestival.com"
+          >info@djsmusicfestival.com</a
+        >
+      </h3>
+      <p>&copy; 2024</p>
+      <ul>
+        <li>
+          <a href="/politica-de-privacidad">Política de Privacidad</a>
+        </li>
+        <li>
+          <a href="/politica-de-cookies">Política de Cookies</a>
+        </li>
+        <li>
+          <a
+            href="#!"
+            target="_blank"
+            rel="noopener noreferrer"
+            title="Instagram de DJ'S Music Festival"
+          >
+            <svg
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                fill-rule="evenodd"
+                d="M3 8a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8Zm5-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H8Zm7.597 2.214a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2h-.01a1 1 0 0 1-1-1ZM12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-5 3a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="#!"
+            target="_blank"
+            rel="noopener noreferrer"
+            title="Twitter de DJ'S Music Festival"
+          >
+            <svg
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z"
+              />
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
